--- a/build.gradle
+++ b/build.gradle
@@ -14,26 +14,25 @@ logger.lifecycle("Using version ${version} for ${name} group $group")
 def signingKey = findProperty('signingKey')
 def signingKeyPwd = findProperty('signingPassword')
 
-oss {
-    name 'auth0'
-    repository 'auth0-java'
-    organization 'auth0'
-    description 'Java client library for the Auth0 platform.'
-    baselineCompareVersion '2.0.0'
-    testInJavaVersions = [17, 21]
-    skipAssertSigningConfiguration true
-
-    developers {
-        auth0 {
-            displayName = 'Auth0'
-            email = 'oss@auth0.com'
-        }
-        lbalmaceda {
-            displayName = 'Luciano Balmaceda'
-            email = 'luciano.balmaceda@auth0.com'
-        }
-    }
-}
+//oss {
+//    name 'auth0'
+//   repository 'auth0-java'
+//    organization 'auth0'
+//    description 'Java client library for the Auth0 platform.'
+//   baselineCompareVersion '2.0.0'
+//    testInJavaVersions = [17, 21]
+//    skipAssertSigningConfiguration true
+//    developers {
+//        auth0 {
+//            displayName = 'Auth0'
+//            email = 'oss@auth0.com'
+//        }
+//        lbalmaceda {
+//            displayName = 'Luciano Balmaceda'
+//            email = 'luciano.balmaceda@auth0.com'
+//        }
+//    }
+//}
 
 signing {
   useInMemoryPgpKeys(signingKey, signingKeyPwd)
