chore: clean codes

--- a/build.gradle
+++ b/build.gradle
@@ -34,9 +34,9 @@ def signingKeyPwd = findProperty('signingPassword')
 //    }
 //}
 
-signing {
-  useInMemoryPgpKeys(signingKey, signingKeyPwd)
-}
+//signing {
+//  useInMemoryPgpKeys(signingKey, signingKeyPwd)
+//}
 
 jacocoTestReport {
     reports {
