--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -17,7 +17,7 @@ jobs:
           java-version: 17
       - uses: gradle/gradle-build-action@4c39dd82cd5e1ec7c6fa0173bb41b4b6bb3b86ff
         with:
-          arguments: assemble apiDiff check jacocoTestReport --continue --console=plain
+          arguments: assemble check jacocoTestReport --continue --console=plain
       - uses: codecov/codecov-action@125fc84a9a348dbcf27191600683ec096ec9021c
         with:
           flags: unittests
